rf(inscription): petits fixs

--- a/Bot Inscription (JS)/src/config.json
+++ b/Bot Inscription (JS)/src/config.json
@@ -1,6 +1,7 @@
 {
     "channels": {
-        "inscription": "1235887936340234340"
+        "inscriptionlog": "1235887936340234340",
+        "inscriptionmessage": "1200830790825693264"
     },
     "colors": {
         "base": "#0099ff",
