--- a/Bot Inscription (JS)/src/config.template.json
+++ b/Bot Inscription (JS)/src/config.template.json
@@ -1,11 +1,13 @@
 {
     "channels": {
-        "inscriptionlog": "channel_id",
-        "inscriptionmessage": "channel_id"
+        "inscriptionLog": "channel_id",
+        "inscriptionMessage": "channel_id",
+        "rules": "channel_id"
     },
     "colors": {
         "base": "#0099ff",
         "success": "#0099ff",
+        "admin": "#ffd800",
         "error": "#0099ff"
     }
 }
