feat: create voice channel system

--- a/Bot Inscription (JS)/src/config.template.json
+++ b/Bot Inscription (JS)/src/config.template.json
@@ -2,12 +2,16 @@
     "channels": {
         "inscriptionLog": "channel_id",
         "inscriptionMessage": "channel_id",
-        "rules": "channel_id"
+        "rules": "channel_id",
+        "voiceCreate": "channel_id"
     },
     "colors": {
         "base": "#0099ff",
         "success": "#0099ff",
         "admin": "#ffd800",
         "error": "#0099ff"
+    },
+    "text": {
+        "voiceCreate": "🔊┊ channel_name"
     }
 }
