chore(config): update config

--- a/src/config.template.json
+++ b/src/config.template.json
@@ -5,7 +5,8 @@
     "rules": "channel_id",
     "voiceCreate": [
       "channel_id"
-    ]
+    ],
+    "events": "channel_id"
   },
   "colors": {
     "base": "#0099ff",
