--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "discord.js": "^14.18.0",
         "dotenv": "^16.5.0",
         "eslint": "^9.25.1",
+        "luxon": "^3.6.1",
         "mocha": "^10.8.2",
         "sqlite3": "^5.1.7"
     }
