--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eslint": "^9.25.1",
         "luxon": "^3.6.1",
         "mocha": "^10.8.2",
+        "node-schedule": "^2.1.1",
         "sqlite3": "^5.1.7"
     }
 }
